--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
   "env": {
     "administrador": {
       "description": "El Usuario DE Telegram Q Va A ADministrar El Bot",
-      "value": ""
+      "value": "Michel1203"
     },
     "bot_token": {
       "description": "El token del bot",
-      "value": ""
+      "value": "5053538247:AAEUEpY1008i2V9Uk_AD0Lao50qs9npylNU"
     }
   }
 }
